unpackaged/main/default/objects/litify__lp_Plan__c/litify__lp_Plan__c.object-meta.xml
<CustomObject>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>