unpackaged/main/default/objects/litify__lp_Plan__c/fields/litify__lp_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Auto_Number__c</fullName>
    <displayFormat>P-{00000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>