unpackaged/main/default/objects/litify__lp_Plan__c/fields/litify__lp_Closed__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>