unpackaged/main/default/objects/litify__lp_Plan__c/fields/litify__lp_Created_From__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Created_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From</label>
    <referenceTo>litify__lp_Plan__c</referenceTo>
    <relationshipLabel>Live Plans</relationshipLabel>
    <relationshipName>lp_Live_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>