unpackaged/main/default/objects/litify__lp_Plan__c/fields/litify__lp_Description__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>