unpackaged/main/default/objects/litify__lp_Plan__c/fields/litify__lp_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Plan_Code__c</fullName>
    <label>Plan Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>