unpackaged/main/default/objects/litify__lp_Plan__c/fields/litify__lp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>